画像添付の永続化を追加
